Graal and some tuning